# AgentsServer

./: .gitignore  README.md  RUNBOOK.md  VERSION  agent_server.py  agentsdock_jobs.py  codex_app_server.py  deploy.sh  install.sh  pyproject.toml  release-public-key.pem  test_agent_prompt_format.py  test_agent_terminal_context.py  test_agentsdock_jobs.py  test_codex_app_server.py  test_codex_resume_recovery.py  test_codex_transport_integration.py  test_compact_timeline_paging.py  test_file_content_type.py  test_handoff_digest.py  test_installer.py  test_job_schedules.py  test_queue_steer.py  test_release_contract.py  test_runtime_diagnostics.py  test_server_update_endpoints.py  test_state_migration.py  test_subagent_snapshot.py  test_terminal_archive.py  test_terminal_geometry.py  test_terminal_websocket_rejection.py  test_timeline_index_jobs.py  test_timeline_search.py  test_update_runner.py  test_workspace_files.py  update_runner.py
.github/workflows/: server-release.yml
scripts/: package_release.py
systemd/: agents-server.service.example  zenithbot-agent.service.example
